--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,122 @@
- @import './colors.scss';
+@import './colors.scss';
 
 * {
     box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
-
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+}
 body {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     background-color: $backgroundColor;
+    margin: 0;
+}
+.btn {
+    white-space: normal;
+    word-wrap: break-word;
+    border-radius: 0;
+}
+html, body, #app {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+header {
+    margin-bottom: 10px;
+}
+.nav-item {
+    position: relative;
+}
+.navbar-brand {
+    padding: 10px;
+}
+main {
+    flex-grow: 1;
+    display: flex;
+    overflow: hidden;
+    padding: 0 10px;
+}
+#tabs {
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    padding-right: 10px;
+}
+.tab {
+    filter: grayscale(1);
+    opacity: 0.7;
+    display: flex;
+    color: white;
+    width: 200px;
+    min-height: 100px;
+}
+.tab.active {
+    filter: grayscale(0);
+    opacity: 1;
+}
+.tab-name {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: -1;
+}
+#products {
+    flex-grow: 1;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    overflow: auto;
+    grid-gap: 10px;
+}
+.product {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.product-img {
+    width: 100%;
+    flex-grow: 1;
+}
+.product-name {
+    padding: 10px 0;
+}
+.product-control {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 10px;
+}
+.product-price {
+}
+footer {
+    background-color: firebrick;
+    min-height: 100px;
+}
+@media screen and (min-width: 720px) {
+    #products {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media screen and (min-width: 1024px) {
+    #products {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+@media screen and (min-width: 1366px) {
+    #products {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
