--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,12 +1,17 @@
 doctype html
-html
+html(lang='en')
   head
-    meta(charset='UTF-8')
+    meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0, shrink-to-fit=no')
     title= title
+    link(rel='stylesheet', href='https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons')
     link(rel='stylesheet', href='/css/styles.min.css')
   body
     block content
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js')
+    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
+    script(src='https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/arrive/2.4.1/arrive.min.js')
+    script(src='https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js')
     script(src='/js/build.min.js')
