--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,7 @@ html(lang='en')
     link(rel='stylesheet', href='https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons')
     link(rel='stylesheet', href='/css/styles.min.css')
+    link(rel='icon', href='https://www.shareicon.net/download/2016/08/18/816370_coffee-cup_512x512.png')
   body
     block content
     script(src='https://code.jquery.com/jquery-3.2.1.min.js')
