--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,3 @@
-@import './colors.scss';
 
 * {
     box-sizing: border-box;
@@ -30,9 +29,19 @@ header {
 }
 .nav-item {
     position: relative;
+    i {
+        font-size: 28px;
+    }
 }
 .navbar-brand {
     padding: 10px;
+}
+.navbar {
+    display: flex;
+    justify-content: space-between;
+}
+.navbar-nav {
+    flex-direction: row;
 }
 main {
     flex-grow: 1;
@@ -40,120 +49,34 @@ main {
     overflow: hidden;
     padding: 0 10px;
 }
-#tabs {
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-    padding-left: 10px;
-}
-.tab {
-    filter: grayscale(1);
-    opacity: 0.7;
-    display: flex;
-    color: white;
-    width: 200px;
-    min-height: 100px;
+.welcome {
+    width: 100%;
+    max-width: 900px;
     margin-bottom: 10px;
 }
-.tab.active {
-    filter: grayscale(0);
-    opacity: 1;
-}
-.tab-name {
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+#payment-method, #payment-method a {
     display: flex;
     align-items: center;
-    justify-content: center;
-    z-index: -1;
 }
-#products {
-    flex-grow: 1;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    overflow: auto;
-    grid-gap: 10px;
-}
-.product-offer {
-    height: 300px;
+.payment-methods, .dining-choices {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
-.po-img {
-    cursor: pointer;
+.selection {
     width: 100%;
-    flex-grow: 1;
-}
-.po-img .btn {
-    height: 100%;
-    width: 100%;
-}
-.po-name {
-    padding: 10px 0;
-}
-.po-control {
-    width: 100%;
+    max-width: 900px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5px 10px;
-}
-.product-details {
-    display: flex;
-}
-.pd-img {
-    width: 50%;
-    height: 200px;
-}
-.pd-details {
-    width: 50%;
-    padding-left: 10px;
-    display: flex;
-    flex-direction: column;
-}
-.pd-name {
-    text-transform: uppercase;
-    font-weight: 500;
-    flex-grow: 1;
-}
-.pd-price {
-    font-size: 32px;
-    font-weight: 300;
-}
-.pd-control {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.pd-control .btn {
-    margin: 0;
-}
-footer {
-    background-color: firebrick;
-    min-height: 100px;
-}
-@media screen and (min-width: 720px) {
-    #products {
-        grid-template-columns: repeat(2, 1fr);
+    .card {
+        width: 45%;
+        max-width: 480px;
     }
-    .modal-dialog {
-        max-width: 800px;
-    }
-}
-@media screen and (min-width: 1024px) {
-    #products {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-@media screen and (min-width: 1366px) {
-    #products {
-        grid-template-columns: repeat(4, 1fr);
+    .card-img-top {
+        height: 200px;
     }
 }
