--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
     meta(name='viewport', content='width=device-width, user-scalable=no')
     title= title
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css')
     link(rel='stylesheet', href='https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons')
     link(rel='stylesheet', href='/css/styles.min.css')
