--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,9 +24,6 @@ html, body, #app {
     display: flex;
     flex-direction: column;
 }
-header {
-    margin-bottom: 10px;
-}
 .nav-item {
     position: relative;
     i {
@@ -35,6 +32,9 @@ header {
 }
 .navbar-brand {
     padding: 10px;
+    span {
+        display: none;
+    }
 }
 .navbar {
     display: flex;
@@ -47,7 +47,7 @@ main {
     flex-grow: 1;
     display: flex;
     overflow: hidden;
-    padding: 0 10px;
+    padding: 0;
 }
 .welcome {
     width: 100%;
@@ -72,11 +72,67 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-direction: column;
+    overflow: auto;
     .card {
-        width: 45%;
-        max-width: 480px;
+        width: 100%;
     }
     .card-img-top {
-        height: 200px;
+        height: 100px;
     }
+}
+#standby-carousel {
+    height: 100%;
+    div {
+        height: 100%;
+        width: 100%;
+    }
+}
+footer .nav-item:last-child {
+    margin-left: auto;
+}
+#checkout-button {
+    display: none;
+    min-width: 200px;
+    padding: 16px 0;
+}
+
+
+
+.spinner-ring {
+    display: flex;
+    position: relative;
+    width: 64px;
+    height: 64px;
+    align-items: center;
+    justify-content: center;
+}
+.spinner-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    margin: 0;
+    border: 5px solid #009688;
+    border-radius: 50%;
+    animation: spinner-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #009688 transparent transparent transparent;
+}
+.spinner-ring div:nth-child(1) { animation-delay: -0.45s; }
+.spinner-ring div:nth-child(2) { animation-delay: -0.3s; }
+.spinner-ring div:nth-child(3) { animation-delay: -0.15s;}
+@keyframes spinner-ring {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+#spinner, .spinner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: calc(50% - 32px);
+    left: calc(50% - 32px);
+    color: #009688;
+    font-weight: bold;
 }
