--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -6,6 +6,7 @@
     overflow: auto;
     grid-gap: 10px;
     grid-template-rows: max-content;
+    padding: 10px 10px 0 0;
 }
 .product-offer {
     height: 300px;
@@ -84,11 +85,11 @@
     padding-left: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
 }
 .pd-name {
     text-transform: uppercase;
     font-weight: 500;
-    flex-grow: 1;
 }
 .pd-price {
     font-size: 32px;
