--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -3,15 +3,14 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
-    padding-right: 10px;
-    min-width: 200px;
+    padding: 10px 10px 0 10px;
 }
 .tab {
     filter: grayscale(1);
     opacity: 0.7;
     display: flex;
     color: white;
-    width: 200px;
+    min-width: 100px;
     min-height: 100px;
     margin-bottom: 10px;
 }
