added remove all from cart

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,7 +14,7 @@ body {
     background-color: $backgroundColor;
     margin: 0;
 }
-.btn {
+.btn, .btn.btn-lg {
     white-space: normal;
     word-wrap: break-word;
     border-radius: 0;
