--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -10,6 +10,7 @@
     min-height: 160px;
     max-height: 480px;
     overflow: auto;
+    margin-bottom: 10px;
 }
 .cart-item {
     display: flex;
@@ -60,7 +61,4 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-.cs-price, .cs-quantity {
-    padding: 10px 20px;
 }
