--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -5,7 +5,7 @@
     grid-template-columns: repeat(1, minmax(0, 1fr));
     overflow: auto;
     grid-gap: 10px;
-    grid-template-rows: max-content;
+    grid-auto-rows: min-content;
     padding: 10px 10px 0 0;
 }
 .product-offer {
