--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -6,21 +6,18 @@
     padding: 10px 10px 0 10px;
 }
 .tab {
-    filter: grayscale(1);
-    opacity: 0.7;
     display: flex;
     color: white;
     min-width: 100px;
     min-height: 100px;
     margin-bottom: 10px;
+    opacity: 0.7;
+    padding: 0;
 }
 .tab.active {
-    filter: grayscale(0);
     opacity: 1;
 }
-.tab-name {
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
+.tab-overlay {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -29,5 +26,31 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: -1;
+    z-index: -2;
+}
+.tab-name {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+}
+.tab-overlay {
+    filter: grayscale(1);
+}
+.tab.active .tab-overlay {
+    filter: grayscale(0);
+}
+.tab .cart-quantity-indicator {
+    min-width: 70px;
+    font-size: 1em;
+    position: absolute;
+    height: auto;
+    width: auto;
+    top: 5px;
+    right: 0;
+    padding: 5px 15px;
+    .material-icons {
+        font-size: 18px;
+    }
 }
