--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -5,6 +5,14 @@
     cursor: pointer;
     display: flex;
     align-items: center;
+    a {
+        min-width: 140px;
+        text-align: right;
+    }
+}
+#items-count {
+    min-width: 110px;
+    font-weight: 500;
 }
 .cart-items {
     min-height: 160px;
