--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,6 +14,8 @@ html(lang='en')
     script(src='https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/arrive/2.4.1/arrive.min.js')
     script(src='https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/cs.js')
     script(src='/js/build.min.js')
   body
     block content
