--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,7 @@ html(lang='en')
     link(rel='stylesheet', href='/css/styles.min.css')
     link(rel='icon', href='https://www.shareicon.net/download/2016/08/18/816370_coffee-cup_512x512.png')
     script(src='https://code.jquery.com/jquery-3.2.1.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js')
     script(src='https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/arrive/2.4.1/arrive.min.js')
     script(src='https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js')
