added sequential animation changed nexttab logic added products header

--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -14,6 +14,14 @@
         width: 100%;
     }
 }
+.products-header {
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    grid-column: 1/-1;
+    margin-bottom: 0;
+    span, i { padding: 10px 0; }
+}
 .product-offer {
     border-radius: 5px;
     background-color: #fff;
