--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -5,11 +5,11 @@
     scroll-padding: 50px 0 0 50px;
 }
 .tab {
-    border-radius: 5px;
+    border-radius: $borderRadius;
     display: flex;
     color: white;
-    min-width: 100px;
-    min-height: 100px;
+    width: 100px;
+    height: 100px;
     margin-bottom: 20px;
     opacity: 0.5;
     padding: 0;
