--- a/src/scss/mediaqueries.scss
+++ b/src/scss/mediaqueries.scss
@@ -5,6 +5,9 @@
     }
 }
 @media screen and (min-width: 720px) {
+    .form-signin {
+        min-width: 480px;
+    }
     .product-offer {
         height: 270px;
     }
@@ -15,7 +18,7 @@
         flex-direction: row;
         overflow: initial;
         .card {
-            width: 45%;
+            width: 48%;
         }
         .card-img-top {
             height: 200px;
@@ -25,7 +28,7 @@
         display: inline;
     }
     .modal-dialog {
-        max-width: 800px;
+        max-width: 768px;
     }
     .cart-item {
         flex-wrap: nowrap;
@@ -47,6 +50,11 @@
         min-width: 80px;
     }
 }
+@media screen and (min-width: 840px) {
+    .pd-control {
+        display: flex;
+    }
+}
 @media screen and (min-width: 1024px) {
     .tab {
         width: 180px;
@@ -57,9 +65,6 @@
     }
     .product-offer.highlight {
         grid-column-end: 4;
-    }
-    .product-offer .add, .product-details .add {
-        /*min-width: 140px;*/
     }
     .add i.material-icons {
         font-size: 28px;
