--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -41,10 +41,12 @@
     visibility: hidden;
 }
 .product-offer .add, .product-details .add {
-    /*min-width: 100px;*/
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+.product-details .order {
+    min-width: 120px;
 }
 .cart-quantity-indicator {
     font-size: 1.25em;
@@ -125,10 +127,10 @@
     color: $themeColor;
 }
 .pd-row {
+    display: flex;
     text-align: right;
 }
 .pd-control {
-    display: flex;
     align-items: center;
     justify-content: space-between;
 }
