added transactions endpoint fixed receipt layout fixed passport ...

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -52,7 +52,7 @@ html, body, #app {
 .navbar-nav {
     flex-direction: row;
 }
-#dining-choice {
+#delivery-method {
     display: none;
 }
 main {
