--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -66,6 +66,9 @@ main {
     width: 100%;
     max-width: 720px;
 }
+.no-bounds-card {
+    width: 100%;
+}
 #payment-method, #payment-method a {
     display: flex;
     align-items: center;
@@ -77,6 +80,32 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.control-panel {
+    display: flex;
+    flex-direction:row;
+    justify-content:flex-start;
+}
+#cp-tab-screen {
+    width:100%;
+    height:100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding:20px 20px;
+}
+#cp-header {
+    width:100%;
+    height:66px;
+    padding:8px 16px;
+    background-color:#009688;
+    align-items: center;
+    display: flex;
+}
+#cp-body {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
 }
 .finish-screen .card-header {
     display: flex;
