--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -93,6 +93,7 @@ main {
     flex-direction: column;
     justify-content: flex-start;
     padding:20px 20px;
+    overflow: auto;
 }
 #cp-header {
     width:100%;
