--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -204,6 +204,7 @@ span.match {
     font-weight: 500;
 }
 #db-hourly-chart {
+    background-color: initial;
     grid-column: 1/4;
     height: 320px;
 }
