--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -133,7 +133,7 @@ span.match {
     width: 60px;
     background-size: contain;
 }
-.sr-ean, .sr-price {
+.sr-ean, .sr-price, .sr-id, .sr-number {
     text-align: right;
 }
 .sr-group, .sr-vat, .sr-edit {
