--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -150,6 +150,9 @@ span.match {
         box-shadow: none;
     }
 }
+.form-control.invalid {
+    background-image: linear-gradient(0deg, #d50000 2px, rgba(213,0,0,0) 0), linear-gradient(0deg, rgba(0,0,0,.26) 1px, transparent 0);
+}
 .form-row > * {
     flex-grow: 1;
 }
