--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,6 +20,7 @@ html(lang='en')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/cs.js')
     block scripts
   body
+    block content
     #app
     #spinner
     #modal
