--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -19,7 +19,6 @@
 }
 #cp-header {
     color: $themeColor;
-    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -180,8 +179,7 @@ span.match {
 .dashboard {
     padding: 10px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(5, auto);
+    grid-template-columns: 1fr;
     grid-gap: 10px;
 }
 /*.db-row {
@@ -203,15 +201,6 @@ span.match {
     font-size: 18px;
     font-weight: 500;
 }
-#db-hourly-chart {
-    background-color: initial;
-    grid-column: 1/4;
-    height: 320px;
-}
-#db-top-sold {
-    grid-column: 2/4;
-    grid-row: 3/6
-}
 .db-item {
     padding: 5px;
     display: flex;
@@ -220,9 +209,35 @@ span.match {
         background-color: #f1f1f1;
     }
 }
-#db-average-revenue, #db-revenues-by-vat, #db-revenues-by-group {
-    grid-column: 1/2;
+#db-hourly-chart {
+    display: none;
 }
-#db-average-revenue { grid-row: 3/4 }
-#db-revenues-by-vat { grid-row: 4/5 }
-#db-revenues-by-group { grid-row: 5/6 }
+@media screen and (min-width: 720px) {
+    #cp-header {
+        display: flex;
+    }
+    #db-hourly-chart {
+        display: block;
+    }
+}
+@media screen and (min-width: 840px) {
+    .dashboard {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(5, auto);
+    }
+    #db-hourly-chart {
+        background-color: initial;
+        grid-column: 1/4;
+        height: 320px;
+    }
+    #db-top-sold {
+        grid-column: 2/4;
+        grid-row: 3/6
+    }
+    #db-average-revenue, #db-revenues-by-vat, #db-revenues-by-group {
+        grid-column: 1/2;
+    }
+    #db-average-revenue { grid-row: 3/4 }
+    #db-revenues-by-vat { grid-row: 4/5 }
+    #db-revenues-by-group { grid-row: 5/6 }
+}
