--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -209,14 +209,14 @@ span.match {
         background-color: #f1f1f1;
     }
 }
-#db-hourly-chart {
+#db-hour-chart {
     display: none;
 }
 @media screen and (min-width: 720px) {
     #cp-header {
         display: flex;
     }
-    #db-hourly-chart {
+    #db-hour-chart {
         display: block;
     }
 }
@@ -225,7 +225,7 @@ span.match {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(5, auto);
     }
-    #db-hourly-chart {
+    #db-hour-chart {
         background-color: initial;
         grid-column: 1/4;
         height: 320px;
