--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,7 @@
     display: none;
 }
 body {
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', 'Roboto', Arial, Helvetica, sans-serif;
     background-color: $backgroundColor;
     margin: 0;
 }
