--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@ html(lang='en')
     title= title
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css')
     link(rel='stylesheet', href='https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css')
-    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700|Material+Icons')
     link(rel='stylesheet', href='/css/styles.min.css')
     link(rel='icon', href='https://www.shareicon.net/download/2016/08/18/816370_coffee-cup_512x512.png')
     block links
