--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,9 @@ body {
     word-wrap: break-word;
     border-radius: 0;
 }
+.btn.btn-xlg {
+    font-size: 38px;
+}
 .btn-icon {
     display: flex;
     align-items: center;
