--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -1,4 +1,15 @@
-
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #ccc !important;
+}
+::-moz-placeholder { /* Firefox 19+ */
+    color: #ccc !important;
+}
+:-ms-input-placeholder { /* IE 10+ */
+    color: #ccc !important;
+}
+:-moz-placeholder { /* Firefox 18- */
+    color: #ccc !important;
+}
 .control-panel {
     display: flex;
     flex-direction:row;
@@ -218,6 +229,10 @@ form {
         font-size: 16px;
         font-style: normal;
         color: rgb(255, 192, 192)
+    }
+    input[type=file] {
+        position: absolute;
+        top: -9999px;
     }
 }
 .mi-header {
