--- a/views/admin.pug
+++ b/views/admin.pug
@@ -6,6 +6,15 @@ block links
 block scripts
   script(src='https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/pikaday.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.0.0/js/vendor/jquery.ui.widget.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/blueimp-load-image/2.23.0/load-image.all.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/javascript-canvas-to-blob/3.15.0/js/canvas-to-blob.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.0.0/js/jquery.iframe-transport.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.0.0/js/jquery.fileupload.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.0.0/js/jquery.fileupload-process.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.0.0/js/jquery.fileupload-image.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.0.0/js/jquery.fileupload-validate.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/cloudinary-jquery-file-upload/2.6.3/cloudinary-jquery-file-upload.min.js')
   script(src='/js/admin.build.min.js')
 
 
