applying changes after saving forms

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -184,6 +184,7 @@ form {
     width: 200px;
 }
 .img-upload {
+    position: relative;
     max-width: 300px;
     cursor: pointer;
     padding-right: 20px;
