--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -218,3 +218,7 @@ footer .card-header {
 .locale-ko { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/kp.svg) }
 .locale-ja { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/jp.svg) }
 .locale-de { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/de.svg) }
+i.icon {
+    display: block;
+    margin: 0 auto;
+}
