--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -188,8 +188,7 @@ form {
     max-width: 300px;
     cursor: pointer;
     padding-right: 20px;
-    width: 100%;
-    height: 100%;
+    min-height: 120px;
     .img-holder {
         width: 100%;
         height: 100%;
@@ -317,6 +316,9 @@ input.hidden {
     }
 }
 @media screen and (min-width: 840px) {
+    .img-upload {
+        width: 240px;
+    }
     .dashboard {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(5, auto);
