--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html(lang='en')
     link(rel='stylesheet', href='https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700|Material+Icons')
     link(rel='stylesheet', href='/css/styles.min.css')
-    link(rel='icon', href='https://www.shareicon.net/download/2016/08/18/816370_coffee-cup_512x512.png')
+    link(rel='icon', href='https://res.cloudinary.com/itakecz/image/upload/v1575245899/favicon_zuuuf9.png')
     block links
     script(src='https://code.jquery.com/jquery-3.2.1.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js')
